--- a/progress-step/index.html
+++ b/progress-step/index.html
@@ -21,6 +21,7 @@
         <button class="btn" id="proximo">Próximo</button>
 
         <script src="script.js"></script>
+        <!-- <script src="script2.js"></script> -->
     </div>
 </body>
 </html>
